[metadata]
name = captcha_crack
version = 0.1
author = Dikshansh Kumar Lodhi
author_email = dikshansh1712@gmail.com
description = A package to crack VTOPs captcha. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deekay1712/vtop-captcha-crack
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True